[gd_scene load_steps=2 format=3 uid="uid://debugconsole001"]

[ext_resource type="Script" path="res://scripts/debug/debug_console.gd" id="1_console"]

[node name="DebugConsole" type="CanvasLayer"]
layer = 100
script = ExtResource("1_console")
process_mode = 3

[node name="ConsoleContainer" type="Control" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 300.0
grow_horizontal = 2

[node name="Background" type="ColorRect" parent="ConsoleContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 0.9)

[node name="Output" type="RichTextLabel" parent="ConsoleContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
scroll_following = true

[node name="InputField" type="LineEdit" parent="ConsoleContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -35.0
offset_right = -10.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
placeholder_text = "Enter command..."
